--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: "eclipse"
 
-def spockVersion = '1.0-groovy-2.0-SNAPSHOT'
-def groovyVersion = '2.1.8'
+def spockVersion = '1.3-groovy-2.5'
+def groovyVersion = '2.5.1'
 
 repositories {
     mavenCentral()
@@ -51,5 +51,3 @@ idea {
 task wrapper(type: Wrapper) {
     gradleVersion = '1.12'
 }
-
-
