--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
-apply plugin: 'groovy'
-apply plugin: 'idea'
-apply plugin: "eclipse"
+plugins {
+  id 'groovy'
+  id 'idea'
+}
+// apply plugin: 'groovy'
+// apply plugin: 'idea'
+// apply plugin: "eclipse"
 
 def spockVersion = '1.3-groovy-2.5'
 def groovyVersion = '2.5.1'
@@ -14,7 +18,7 @@ repositories {
 }
 
 dependencies {
-    groovy "org.codehaus.groovy:groovy-all:$groovyVersion"
+    implementation "org.codehaus.groovy:groovy-all:$groovyVersion"
     compile 'commons-lang:commons-lang:2.6'
 
     testCompile 'junit:junit:4.10'
@@ -43,11 +47,6 @@ sourceSets {
 
 idea {
     project {
-        javaVersion = 1.7
-        jdkName = '1.7'
+        jdkName = '1.8'
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
 }
