--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
   id 'groovy'
   id 'idea'
+  id 'eclipse'
 }
-// apply plugin: 'groovy'
-// apply plugin: 'idea'
-// apply plugin: "eclipse"
 
 def spockVersion = '1.3-groovy-2.5'
 def groovyVersion = '2.5.1'
