--- a/build.gradle
+++ b/build.gradle
@@ -17,19 +17,19 @@ repositories {
 
 dependencies {
     implementation "org.codehaus.groovy:groovy-all:$groovyVersion"
-    compile 'commons-lang:commons-lang:2.6'
+    implementation 'commons-lang:commons-lang:2.6'
 
-    testCompile 'junit:junit:4.10'
+    testImplementation 'junit:junit:4.10'
 
 	// jar for latest spock
-    testCompile 'cglib:cglib-nodep:2.2.2'               // need to mock classes
+    testImplementation 'cglib:cglib-nodep:2.2.2'               // need to mock classes
 
 
-    testCompile "org.spockframework:spock-core:$spockVersion"
+    testImplementation "org.spockframework:spock-core:$spockVersion"
     // testCompile "org.spockframework:spock-spring:$spockVersion"  //need if you are doing spring... fails without the spring dependencies
 
-    testRuntime "com.h2database:h2:1.2.147"
-    testRuntime "org.hamcrest:hamcrest-core:1.3"
+    testImplementation "com.h2database:h2:1.2.147"
+    testImplementation "org.hamcrest:hamcrest-core:1.3"
 }
 
 sourceSets {
