--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
   id 'eclipse'
 }
 
-def spockVersion = '1.3-groovy-2.5'
-def groovyVersion = '2.5.4'
+def spockVersion = '2.0-groovy-3.0'
+def groovyVersion = '3.0.8'
 
 repositories {
     mavenCentral()
@@ -19,17 +19,15 @@ dependencies {
     implementation "org.codehaus.groovy:groovy-all:$groovyVersion"
     implementation 'commons-lang:commons-lang:2.6'
 
-    testImplementation 'junit:junit:4.10'
-
-	// jar for latest spock
-    testImplementation 'cglib:cglib-nodep:2.2.2'               // need to mock classes
-
-
     testImplementation "org.spockframework:spock-core:$spockVersion"
     // testCompile "org.spockframework:spock-spring:$spockVersion"  //need if you are doing spring... fails without the spring dependencies
 
-    testImplementation "com.h2database:h2:1.2.147"
-    testImplementation "org.hamcrest:hamcrest-core:1.3"
+    testImplementation "com.h2database:h2:1.4.197"
+
+    // optional dependencies for using Spock
+    testImplementation "org.hamcrest:hamcrest-core:2.2"   // only necessary if Hamcrest matchers are used
+    testRuntimeOnly "net.bytebuddy:byte-buddy:1.11.0" // allows mocking of classes (in addition to interfaces)
+    testRuntimeOnly "org.objenesis:objenesis:3.2"      // allows mocking of classes without default constructor (together with ByteBuddy or CGLIB)
 }
 
 sourceSets {
@@ -45,6 +43,13 @@ sourceSets {
 
 idea {
     project {
-        jdkName = '1.8'
+        jdkName = '17'
+    }
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
     }
 }
